WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200055
ImageDecoderDirect2D::hotSpot() should return WTF::nullopt instead of default constructed value
https://bugs.webkit.org/show_bug.cgi?id=200055
Summary
ImageDecoderDirect2D::hotSpot() should return WTF::nullopt instead of default...
Konstantin Tokarev
Reported
2019-07-23 16:05:35 PDT
ImageDecoderDirect2D::hotSpot() should return WTF::nullopt instead of default constructed value
Attachments
Patch
(1.45 KB, patch)
2019-07-23 16:06 PDT
,
Konstantin Tokarev
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Konstantin Tokarev
Comment 1
2019-07-23 16:06:54 PDT
Created
attachment 374726
[details]
Patch
Brent Fulgham
Comment 2
2019-07-23 16:31:36 PDT
(In reply to Konstantin Tokarev from
comment #0
)
> ImageDecoderDirect2D::hotSpot() should return WTF::nullopt instead of > default constructed value
I'm so excited someone else is looking at this code!!!!! :-)
Brent Fulgham
Comment 3
2019-07-23 16:47:58 PDT
Comment on
attachment 374726
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=374726&action=review
r=me
> Source/WebCore/platform/graphics/win/ImageDecoderDirect2D.cpp:128 > + return WTF::nullopt;
Doh! Good catch.
WebKit Commit Bot
Comment 4
2019-07-23 17:04:54 PDT
Comment on
attachment 374726
[details]
Patch Clearing flags on attachment: 374726 Committed
r247758
: <
https://trac.webkit.org/changeset/247758
>
WebKit Commit Bot
Comment 5
2019-07-23 17:04:55 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-07-23 17:06:05 PDT
<
rdar://problem/53472189
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug