ImageDecoderDirect2D::hotSpot() should return WTF::nullopt instead of default constructed value https://bugs.webkit.org/show_bug.cgi?id=200055

Reviewed by Brent Fulgham.

* platform/graphics/win/ImageDecoderDirect2D.cpp:
(WebCore::ImageDecoderDirect2D::hotSpot const):


Canonical link: https://commits.webkit.org/213896@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247758 268f45cc-cd09-0410-ab3c-d52691b4dbfc